Change render asset / component icon and fix component context menu icon (#451)

--- a/editor/sass/editor/_editor-assets-panel.scss
+++ b/editor/sass/editor/_editor-assets-panel.scss
@@ -508,7 +508,7 @@
 
 .pcui-asset-grid-view-item.type-render:before {
     @extend .font-icon;
-    content: '\E189';
+    content: map-get($asset-icons, "render");
     position: absolute;
     top: 2px;
     left: 2px;
