--- a/editor/sass/editor/_editor-common.scss
+++ b/editor/sass/editor/_editor-common.scss
@@ -42,6 +42,7 @@ $asset-icons: (
 }
 
 $component-icons: (
+    'anim': '\E198',
     'animation': '\E198',
     'audiolistener': '\E196',
     'audiosource': '\E197',
