--- a/editor/sass/editor/_editor-asset-animstategraph-inspector.scss
+++ b/editor/sass/editor/_editor-asset-animstategraph-inspector.scss
@@ -18,10 +18,44 @@
     }
 }
 
+.asset-animstategraph-inspector-open-button {
+    width: calc(100% - 12px);
+}
+
+.asset-animstategraph-inspector-close-button {
+    position: absolute;
+    right: 0px;
+    top: -1px;
+    width: 26px;
+    height: 26px;
+    z-index: 1000000;
+    color: rgba(255,255,255,0.75);
+    background-color: rgba(41,53,56,0.5);
+}
+
+.pcui-button.asset-animstategraph-inspector-close-button:not(.pcui-disabled):not(.pcui-readonly):hover {
+    background-color: rgba(41,53,56,0.75);
+    color: #fff;
+    box-shadow: none;
+}
+
+.asset-animstategraph-inspector-close-button[data-icon]::before {
+    font-size: 26px;
+    position: absolute;
+    left: -1px;
+    top: -5px;
+    line-height: 34px;
+}
+
+
+.asset-animstategraph-inspector-close-button-tooltip {
+    top: 40px !important;
+}
+
 .pcui-container.asset-animstategraph-inspector-layer-select {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 32px;
     width: 200px;
     height: 24px;
     z-index: 9999;
