all s3 static bucket urls are routed to cloudfront (#692)
* all s3 static bucket urls are routed through cloudfront

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -4222,7 +4222,7 @@ strong {
                 &:before {
                     display: block;
                     content: ' ';
-                    background-image: url(https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/images/bcg_primary.jpg);
+                    background-image: url(https://playcanvas.com/static-assets/images/bcg_primary.jpg);
                     background-repeat: no-repeat;
                     background-position: center center;
                     background-size: cover;
