--- a/editor/sass/editor/_editor-left-toolbar.scss
+++ b/editor/sass/editor/_editor-left-toolbar.scss
@@ -15,7 +15,7 @@
             display: none;
         }
         &.logo {
-            background-image: url("https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/images/editor_logo.png");
+            background-image: url("https://playcanvas.com/static-assets/images/editor_logo.png");
             background-size: 92px 46px;
             background-repeat: no-repeat;
             background-position: -1px -1px;
