--- a/editor/sass/fonts.scss
+++ b/editor/sass/fonts.scss
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'pc-icon';
-    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/PlayIcons-Regular.eot');
-    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/PlayIcons-Regular.eot?#iefix') format('embedded-opentype'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/PlayIcons-Regular.woff2') format('woff2'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/PlayIcons-Regular.woff') format('woff'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/PlayIcons-Regular.ttf') format('truetype'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/PlayIcons-Regular.svg') format('svg');
+    src: url('https://playcanvas.com/static-assets/fonts/PlayIcons-Regular.eot');
+    src: url('https://playcanvas.com/static-assets/fonts/PlayIcons-Regular.eot?#iefix') format('embedded-opentype'),
+         url('https://playcanvas.com/static-assets/fonts/PlayIcons-Regular.woff2') format('woff2'),
+         url('https://playcanvas.com/static-assets/fonts/PlayIcons-Regular.woff') format('woff'),
+         url('https://playcanvas.com/static-assets/fonts/PlayIcons-Regular.ttf') format('truetype'),
+         url('https://playcanvas.com/static-assets/fonts/PlayIcons-Regular.svg') format('svg');
 
     font-weight: normal;
     font-style: normal;
@@ -13,44 +13,44 @@
 
 @font-face {
     font-family: 'Proxima Nova Regular';
-    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_regular.eot');
-    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_regular.eot?#iefix') format('embedded-opentype'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_regular.woff2') format('woff2'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_regular.woff') format('woff'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_regular.ttf') format('truetype');
+    src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_regular.eot');
+    src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_regular.eot?#iefix') format('embedded-opentype'),
+         url('https://playcanvas.com/static-assets/fonts/proxima_nova_regular.woff2') format('woff2'),
+         url('https://playcanvas.com/static-assets/fonts/proxima_nova_regular.woff') format('woff'),
+         url('https://playcanvas.com/static-assets/fonts/proxima_nova_regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Proxima Nova Light';
-    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_light.eot');
-    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_light.eot?#iefix') format('embedded-opentype'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_light.woff2') format('woff2'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_light.woff') format('woff'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_light.ttf') format('truetype');
+    src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_light.eot');
+    src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_light.eot?#iefix') format('embedded-opentype'),
+         url('https://playcanvas.com/static-assets/fonts/proxima_nova_light.woff2') format('woff2'),
+         url('https://playcanvas.com/static-assets/fonts/proxima_nova_light.woff') format('woff'),
+         url('https://playcanvas.com/static-assets/fonts/proxima_nova_light.ttf') format('truetype');
     font-weight: 200;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Proxima Nova Bold';
-    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_bold.eot');
-    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_bold.eot?#iefix') format('embedded-opentype'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_bold.woff2') format('woff2'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_bold.woff') format('woff'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_bold.ttf') format('truetype');
+    src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_bold.eot');
+    src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_bold.eot?#iefix') format('embedded-opentype'),
+         url('https://playcanvas.com/static-assets/fonts/proxima_nova_bold.woff2') format('woff2'),
+         url('https://playcanvas.com/static-assets/fonts/proxima_nova_bold.woff') format('woff'),
+         url('https://playcanvas.com/static-assets/fonts/proxima_nova_bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Proxima Nova Thin';
-    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_thin_t.eot');
-    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_thin_t.eot?#iefix') format('embedded-opentype'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_thin_t.woff2') format('woff2'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_thin_t.woff') format('woff'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/proxima_nova_thin_t.ttf') format('truetype');
+    src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_thin_t.eot');
+    src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_thin_t.eot?#iefix') format('embedded-opentype'),
+         url('https://playcanvas.com/static-assets/fonts/proxima_nova_thin_t.woff2') format('woff2'),
+         url('https://playcanvas.com/static-assets/fonts/proxima_nova_thin_t.woff') format('woff'),
+         url('https://playcanvas.com/static-assets/fonts/proxima_nova_thin_t.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
 }
