--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -11,12 +11,12 @@ $disabled-opacity: .4;
 
 @font-face {
     font-family: 'inconsolatamedium';
-    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/Inconsolata-webfont.eot');
-    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/Inconsolata-webfont.eot?#iefix') format('embedded-opentype'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/Inconsolata-webfont.woff2') format('woff2'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/Inconsolata-webfont.woff') format('woff'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/Inconsolata-webfont.ttf') format('truetype'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/Inconsolata-webfont.svg#inconsolatamedium') format('svg');
+    src: url('https://playcanvas.com/static-assets/fonts/Inconsolata-webfont.eot');
+    src: url('https://playcanvas.com/static-assets/fonts/Inconsolata-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://playcanvas.com/static-assets/fonts/Inconsolata-webfont.woff2') format('woff2'),
+         url('https://playcanvas.com/static-assets/fonts/Inconsolata-webfont.woff') format('woff'),
+         url('https://playcanvas.com/static-assets/fonts/Inconsolata-webfont.ttf') format('truetype'),
+         url('https://playcanvas.com/static-assets/fonts/Inconsolata-webfont.svg#inconsolatamedium') format('svg');
     font-weight: normal;
     font-style: normal;
 }
