--- a/editor/sass/variables.scss
+++ b/editor/sass/variables.scss
@@ -1,3 +1,4 @@
+// imported from https://github.com/playcanvas/pcui/blob/master/src/scss/variables.scss
 @import '../node_modules/@playcanvas/pcui/src/scss/variables';
 
 // add extra variables here
