Hard reset to checkpoint (#931)
* refactor get latest ch

* refactor task call in merge apply

* handle failed for revert

* initial hard reset task

* rm unused

* rm unused

* call swap in

* todo comments

* set latest for branch

* add new kw

* fix typo

* init rm edges

* rm space

* find edges

* error if latest ch

* rm edges

* refactor delete by key param

* comment

* move file to folder

* init check ch

* todo

* format error data

* next edge fix

* traverse from above

* use parent edges map

* ch to remove

* rm stored checkpoints

* total s3 key

* check ch size

* add edges above to rm

* incl start ch

* move fun

* inclStart false

* use non seen

* Added hard reset button to checkpoints

* Do not print stack on NormalErrors in the pipeline

* refactor id to ch data

* rm unused file

* Handle hard reset messenger messages

* rename var to camelcase

Co-authored-by: zachppaul <zachppaul@gmail.com>
Co-authored-by: Vaios Kalpias Ilias <vkalpiasilias@c.snap.com>

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -7806,7 +7806,7 @@ strong {
                             }
                         }
 
-                        &.close-branch {
+                        &.close-branch, &.hard-reset-checkpoint {
                             .ui-panel.main {
                                 > .content {
                                     flex-direction: column;
