Make the Version Control Complete Merge button orange when active to be clearer (#1011)
* Added confirm-merge style

* Made the review merge and confirmation button on version control orange when active

* Updated generated CSS

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -8603,6 +8603,11 @@ strong {
                             font-size: 12px;
                             text-align: center;
                         }
+
+                        .confirm {
+                            background-color: $text-active;
+                            color: $text-primary;
+                        }
                     }
                 }
 
