Update to latest PCUI (include new Menu / MenuItem) and update to latest Editor API (#1076)

--- a/editor/sass/pcui/pcui.scss
+++ b/editor/sass/pcui/pcui.scss
@@ -29,6 +29,8 @@
 @import '../../node_modules/@playcanvas/pcui/src/LabelGroup/style';
 @import '../../node_modules/@playcanvas/pcui/src/GridView/style';
 @import '../../node_modules/@playcanvas/pcui/src/GridViewItem/style';
+@import '../../node_modules/@playcanvas/pcui/src/Menu/style';
+@import '../../node_modules/@playcanvas/pcui/src/MenuItem/style';
 
 // editor specific pcui controls
 @import 'pcui-common';
