CSS for VC graph nodes (#1125)
* vc node line css

* bigger boxes, smaller scale

Co-authored-by: zachppaul <zachppaul@gmail.com>

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -8494,8 +8494,15 @@ strong {
     }
 }
 
-.ui-panel.vc-graph-panel .joint-element {
-    cursor: pointer !important;
+.ui-panel.vc-graph-panel {
+    .joint-element {
+        cursor: pointer;
+    }
+
+    .v-line {
+        font-family: Arial, sans-serif;
+        font-size: 13px;
+    }
 }
 
 .ui-overlay.picker-conflict-manager {
