Keep VC graph in the background while running diff (#1170)
* setZIndex

* close btn position

* darker graph background

* less dark graph

* use moveToBackground not close

* rm repeted key

* vcgraph:isVisible

* _closeCallback field for overlay

* set null callback

* graph and menu color

* selectForCompare node for view changes

Co-authored-by: zachppaul <zachppaul@gmail.com>

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -8505,6 +8505,12 @@ strong {
     }
 }
 
+.pcui-menu.vc-node-menu {
+    .pcui-menu-item {
+        background-color: #293234;
+    }
+}
+
 .ui-overlay.picker-conflict-manager {
     z-index: 300; // larger than drop-area's
 
