Editor: Added release notes button which takes you to github release … (#1199)

--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -39,3 +39,4 @@
 @import "editor-settings-asset-tasks";
 @import "editor-settings-scripts-panel";
 @import "editor-tooltip-reference";
+@import "editor-release-notes";
