Corrupted templates popup (#1203)

--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -40,3 +40,4 @@
 @import "editor-settings-scripts-panel";
 @import "editor-tooltip-reference";
 @import "editor-release-notes";
+@import "editor-fix-templates";
