--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -24,6 +24,7 @@
 @import "editor-asset-material-inspector";
 @import "editor-asset-cubemap-inspector";
 @import "editor-asset-animstategraph-inspector";
+@import "editor-asset-anim-viewer";
 @import "editor-asset-animation-inspector";
 @import "editor-asset-audio-inspector";
 @import "editor-asset-texture-inspector";
