fix a visual bug with the left toolbar when using the anim state graph editor (#1424)

--- a/editor/sass/editor/_editor-left-toolbar.scss
+++ b/editor/sass/editor/_editor-left-toolbar.scss
@@ -1,5 +1,6 @@
 #layout-toolbar {
     background-color: $bcg-darker;
+    z-index: 1000;
 
     > .ui-button {
         display: block;
@@ -100,5 +101,8 @@
             order: 4;
         }
     }
+}
 
+#layout-toolbar.hide-items > div {
+    display: none;
 }
